<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/fondo" android:paddingLeft="15dip" android:paddingRight="15dip" android:paddingTop="10dip">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:paddingBottom="15dip">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_registro_persona_titulo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/titulo"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_registro_paciente_nombre"
                android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/texto"/>

            <EditText
                android:id="@+id/et_registro_paciente_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_registro_paciente_apellido"
                android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/texto"/>

            <EditText
                android:id="@+id/et_registro_paciente_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_registro_paciente_sexo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/texto" />

            <Spinner
                android:id="@+id/sp_registro_paciente_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_registro_paciente_edad"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/texto" />

            <EditText
                android:id="@+id/et_registro_paciente_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dip" >

            <Button
                android:id="@+id/btn_registro_paciente_crear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_registro_paciente_crear" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>