<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="10dip" >

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:paddingBottom="15dip">

        <TextView
            android:id="@+id/ver_prestacion_clinica_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ver_prestacion_clinica_titulo"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/titulo"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/tv_ver_prestacion_clinica_paciente"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/texto" />

            <Spinner
                android:id="@+id/sp_ver_prestacion_clinica_paciente"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_ver_prestacion_clinica_listar"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_listar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/lv_ver_prestacione_clinica_prestaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@color/lv_fondo">
            </ListView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>